force-app/main/default/objects/phsSharedGoals__c/phsSharedGoals__c.object-meta.xml
<CustomObject>
    <label>phsSharedGoals</label>
    <nameField>
        <label>phsManagerGoals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>phsSharedGoals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>