force-app/main/default/objects/phsSharedGoals__c/fields/FocusAreaName__c.field-meta.xml
<CustomField>
    <fullName>FocusAreaName__c</fullName>
    <description>FocusAreaName for Manager Goal</description>
    <label>FocusAreaName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>