force-app/main/default/objects/phsSharedGoals__c/fields/GoalName__c.field-meta.xml
<CustomField>
    <fullName>GoalName__c</fullName>
    <label>GoalName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>