force-app/main/default/objects/phsSharedGoals__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Foreign key to contact</description>
    <label>UserId</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>phsManagerGoals</relationshipName>
    <type>Lookup</type>
</CustomField>